add: store location

--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -7,36 +7,45 @@
     android:id="@+id/rlContainer"
     tools:context=".ui.common.map.MapFragment">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="16dp"
-            app:boxStrokeWidth="0dp"
-            android:id="@+id/tilSearch"
-            app:boxStrokeWidthFocused="0dp"
-            style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
-            app:boxCornerRadiusBottomEnd="20dp"
-            app:boxCornerRadiusBottomStart="20dp"
-            app:boxCornerRadiusTopStart="20dp"
-            app:boxCornerRadiusTopEnd="20dp"
-            app:startIconDrawable="@drawable/ic_search_24px"
-            android:hint="search"
-            android:elevation="4dp"
-            >
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:backgroundTint="@color/white"
-                    android:inputType="text"
-                    android:id="@+id/etSearch"
-                    />
-        </com.google.android.material.textfield.TextInputLayout>
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginHorizontal="16dp"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            app:boxStrokeWidth="0dp"-->
+<!--            android:id="@+id/tilSearch"-->
+<!--            app:boxStrokeWidthFocused="0dp"-->
+<!--            style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"-->
+<!--            app:boxCornerRadiusBottomEnd="20dp"-->
+<!--            app:boxCornerRadiusBottomStart="20dp"-->
+<!--            app:boxCornerRadiusTopStart="20dp"-->
+<!--            app:boxCornerRadiusTopEnd="20dp"-->
+<!--            app:startIconDrawable="@drawable/ic_search_24px"-->
+<!--            android:hint="search"-->
+<!--            android:elevation="4dp"-->
+<!--            >-->
+<!--                <com.google.android.material.textfield.TextInputEditText-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:backgroundTint="@color/white"-->
+<!--                    android:inputType="text"-->
+<!--                    android:id="@+id/etSearch"-->
+<!--                    />-->
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
 
+<!--        <com.mapbox.search.ui.view.SearchResultsView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@+id/tilSearch"-->
+<!--            android:id="@+id/searchResultView"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            android:visibility="gone"-->
+<!--            android:paddingTop="8dp"-->
+<!--            android:paddingBottom="22dp"-->
+<!--            />-->
         <com.mapbox.search.ui.view.SearchResultsView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tilSearch"
             android:id="@+id/searchResultView"
             android:layout_marginTop="16dp"
             android:visibility="gone"
@@ -52,5 +61,16 @@
             android:layout_margin="20dp"
             android:id="@+id/fabMyLocation"
             android:src="@drawable/ic_my_location_24px"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabStoreLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/fabMyLocation"
+            android:layout_alignParentRight="true"
+            android:layout_margin="20dp"
+            android:layout_marginBottom="579dp"
+            android:backgroundTint="@color/white"
+            android:src="@drawable/ic_store_24" />
 
 </RelativeLayout>
