--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -71,7 +71,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:backgroundTint="@color/white"
-            android:hint="Tên đăng nhập"
+            android:inputType="textEmailAddress"
+            android:hint="Email đăng nhập"
             android:gravity="center_vertical"/>
     </com.google.android.material.textfield.TextInputLayout>
 
