--- a/app/src/main/res/navigation/cus_nav.xml
+++ b/app/src/main/res/navigation/cus_nav.xml
@@ -27,6 +27,9 @@
         <action
             android:id="@+id/action_navigation_cus_cart_to_bookDetailsFragment2"
             app:destination="@id/bookDetailsFragment2" />
+        <action
+            android:id="@+id/action_navigation_cus_cart_to_paymentFragment"
+            app:destination="@id/paymentFragment" />
     </fragment>
     <fragment
         android:id="@+id/navigation_cus_profile"
@@ -90,5 +93,13 @@
         <action
             android:id="@+id/action_update_profile_to_navigation_cus_profile"
             app:destination="@id/navigation_cus_profile" />
+    </fragment>
+    <fragment
+        android:id="@+id/paymentFragment"
+        android:name="com.group2.bookstoreproject.ui.customer.payment.PaymentFragment"
+        android:label="PaymentFragment" >
+        <action
+            android:id="@+id/action_paymentFragment_to_navigation_cus_cart"
+            app:destination="@id/navigation_cus_cart" />
     </fragment>
 </navigation>
