--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -10,6 +10,7 @@
         <attr name="showStartText" format="boolean"/>
         <attr name="showShadow" format="boolean"/>
         <attr name="titleStart" format="boolean"/>
+        <attr name="textStartSize" format="integer"/>
     </declare-styleable>
 
     <declare-styleable name="CustomChatMessage">
