--- a/app/src/main/res/layout/fragment_book_manager.xml
+++ b/app/src/main/res/layout/fragment_book_manager.xml
@@ -1,36 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ui.admin.bookManager.BookManagerFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <include
         android:id="@+id/emptyBookLayout"
         layout="@layout/fragment_book_manager_empty"
         android:visibility="gone" />
-    <LinearLayout
+    <include
+        android:id="@+id/search_view"
+        layout="@layout/custom_search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewBook"
+        android:layout_marginHorizontal="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="16dp">
-
-        <include
-            android:id="@+id/search_view"
-            layout="@layout/custom_search_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerViewBook"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="80dp"/>
-    </LinearLayout>
+        android:layout_below="@+id/search_view"
+       />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add"
@@ -38,6 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:src="@drawable/ic_add"
         android:contentDescription="Add book"/>
-</FrameLayout>
+</RelativeLayout>
