--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -1,49 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="120dp"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="110dp"
     android:layout_height="210dp"
+    android:layout_margin="8dp"
+    android:background="@color/cardview_light_background"
+    android:baselineAligned="true"
+    android:gravity="center"
     android:orientation="vertical"
-    android:layout_margin="10dp"
-    android:gravity="center">
+    android:outlineProvider="bounds">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
+        android:layout_width="100dp"
         android:layout_height="100dp"
         android:contentDescription="TODO" />
 
     <LinearLayout
         android:layout_width="100dp"
         android:layout_height="90dp"
+        android:gravity="center"
         android:orientation="vertical"
-        android:gravity="center">
+        android:background="@color/black"
+        android:textStyle="bold">
 
 
         <TextView
 
             android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="text"
+            android:layout_height="20dp"
             android:gravity="center"
-            android:textSize="16sp" />
+            android:text="text"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/authorTextView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="text"
+            android:layout_height="20dp"
             android:gravity="center"
-            android:textSize="14sp" />
+            android:text="text"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/priceTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="text"
             android:gravity="center"
-            android:textSize="14sp" />
+            android:text="text"
+            android:textColor="#FF9800"
+            android:textSize="12sp"
+            android:textStyle="bold"/>
 
     </LinearLayout>
 
