--- a/app/src/main/res/layout/fragment_book_details.xml
+++ b/app/src/main/res/layout/fragment_book_details.xml
@@ -26,8 +26,9 @@
 
         <ImageButton
             android:id="@+id/back_button"
-            android:layout_width="23dp"
-            android:layout_height="33dp"
+            android:layout_width="40dp"
+            android:background="@android:color/transparent"
+            android:layout_height="40dp"
             android:src="@drawable/ic_arrow_back_ios_new_24px" />
 
         <TextView
@@ -44,10 +45,18 @@
 
         <ImageButton
             android:id="@+id/cart_button"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:background="@color/white"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:visibility="gone"
+            android:background="@android:color/transparent"
             android:src="@drawable/ic_shopping_cart_24px" />
+        <ImageButton
+            android:id="@+id/ibEdit"
+            android:visibility="gone"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_drive_file_rename_outline_24" />
 
     </LinearLayout>
 
